style: fix to links styling to avoid wrapping
Relates #220

--- a/frontend/src/style/TLevelContainer.css
+++ b/frontend/src/style/TLevelContainer.css
@@ -15,9 +15,10 @@
 .t-level-container__links {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: .5rem;
   justify-content: center;
   padding: 0 2rem 2rem;
+  min-width: 375px;
 }
 
 .t-level-container__links a {
